# kk_GraphEmbed

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup_dev_env.bat  setup_dev_env.sh
data_preprocessing/: analyze_directory.py  analyze_naming.py  excel_to_gaph_json.py
datasets/processed/: topology_graph.json
datasets/raw/: xbxa_dc4_topology.xlsx
docs/: data_preprocessing_design.md  dynamic_data_integration_design.md  graph_data_import_guide.md  influxdb_multithreading_optimization.md  infrastructure_deployment.md  llm_integration.md  project_roadmap.md  project_status_update.md  time_series_data_model.md
dynamic_graph_rag/config/: settings.py
dynamic_graph_rag/data/: run_time_series_generator.py
dynamic_graph_rag/data/simulated/: time_series_generator.py
dynamic_graph_rag/data/simulated/generators/: __init__.py  log_generator.py  time_series_generator.py
dynamic_graph_rag/data_import/: __init__.py  graph_data_importer.py  run_graph_import.py  test_graph_importer.py
dynamic_graph_rag/db/: influxdb_client.py  neo4j_connector.py
dynamic_graph_rag/llm/: lmstudio_client.py  ollama_client.py  vllm_client.py
dynamic_graph_rag/models/: dynamic_graph.py  graph_data.py
dynamic_graph_rag/rag/: graph_rag_adapter.py  ollama_client.py
dynamic_graph_rag/tests/: connection_test.py  test_graphrag_adapter.py  test_time_series_generator.py
examples/: README.md  graphrag_demo.py  test_graph_rag_adapter.py  test_lmstudio.py  test_ollama.py  test_stream_query.py  test_vllm.py
scripts/: run_graph_import.py  run_time_series_generator.py  start_vllm.sh
