[tool.poetry]
name = "dynamic-graph-rag"
version = "0.1.0"
description = "基于图数据和时序数据的统一查询层，集成Microsoft GraphRAG框架"
authors = ["Your Team <team@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.15.0"
influxdb-client = "^1.36.1"
graphrag = "^2.1.0"
pandas = ">2.2.3,<3.0.0"
numpy = ">=1.25.2,<2.0.0"
scipy = "^1.12.0"
networkx = ">=3.4.2,<4.0.0"
fastapi = {version = "^0.103.1", optional = true}
uvicorn = {version = "^0.23.2", optional = true}
python-dotenv = ">=>1.0.1,<2.0.0"
loguru = "^0.7.0"
tqdm = ">=4.67.1,<5.0.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"