[tool.poetry]
name = "dynamic-graph-rag"
version = "0.1.0"
description = "基于图数据和时序数据的统一查询层，使用LLM进行自然语言交互"
authors = ["Your Team <team@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = ">=1.0.1,<2.0.0"
loguru = "^0.7.0"
neo4j = "^5.15.0"
influxdb-client = "^1.36.1"
pydantic = "^2.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"